hphp/hack/test/typecheck/collections_index_by_key_subtype.php.like_types.exp
File "collections_index_by_key_subtype.php", line 20, characters 14-17:
Typing error (Typing[4324])
File "collections_index_by_key_subtype.php", line 19, characters 25-27:
Expected int
File "collections_index_by_key_subtype.php", line 19, characters 40-49:
But got dynamic because it is an unenforceable type
